--- a/assets/sass/components/_section.scss
+++ b/assets/sass/components/_section.scss
@@ -7,6 +7,12 @@
 /* Section/Article */
 
 	section, article {
+		padding: _size(padding) 0;
+
+		&.section--compact {
+			padding: _size(element-margin) 0;
+		}
+
 		&.special {
 			text-align: center;
 		}
